Add v1 freeze for API endpoints
